--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,15 @@
 <h1>
   {{title}}
 </h1>
+
+<button md-button color="primary" (click)="showThing()">Material Design Dialog</button>
+<br>
+<br>
+<button md-button class="primary" (click)="showCustomThing()">Custom Component Demo</button>
+<br>
+<br>
+<button md-button class="primary" (click)="showAnotherThing()">Custom Component Demo2</button>
+<br>
+<br>
+<div #dummyoutlet></div>
+_______
