Final commits with the observable interface.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,13 +2,22 @@
   {{title}}
 </h1>
 
-<button md-button color="primary" (click)="showThing()">Material Design Dialog</button>
+<button
+  md-button
+  (click)="showThing()"
+>Material Design Dialog</button>
 <br>
 <br>
-<button md-button class="primary" (click)="showCustomThing()">Custom Component Demo</button>
+<button
+  md-button
+  (click)="showCustomThing()"
+>Custom Component Demo1</button>
 <br>
 <br>
-<button md-button class="primary" (click)="showAnotherThing()">Custom Component Demo2</button>
+<button
+  md-button
+  (click)="showAnotherThing()"
+>Custom Component Demo2</button>
 <br>
 <br>
 <div #dummyoutlet></div>
